# ghg-tool

./: .coveragerc  .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  QUICKSTART_WINDOWS.md  README.md  alembic.ini  conftest.py  coverage.json  create-admin.bat  docker-compose.local.yml  docker-compose.quickstart.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  start-demo.bat  start.bat  stop.bat  system_prompts_multi_agent_team.md
.claude/agents/: README.md  architect-agent.md  backend-agent.md  cli-architect-agent.md  compliance-agent.md  data-analyst-agent.md  data-engineer-agent.md  data-quality-agent.md  debugger-agent.md  devops-agent.md  documentation-agent.md  orchestrator-agent.md  project-scaffolder-agent.md  python-expert-agent.md  refactor-agent.md  requirements-agent.md  reviewer-agent.md  security-agent.md  sustainability-expert-agent.md  test-agent.md  visualization-agent.md
.github/workflows/: ci.yml  integration-tests.yml  integration.yml
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 0001_M0_base_schema.py  0002_M1_emissions_immutability.py  0003_M2_factor_catalog_seed.py  0004_M3_dq_findings_dlq.py  0005_M4_rls_policies.py  0006_M5_views_materialized.py  0007_M6_intensity_mv.py  0008_M7_mv_tenant_security.py  0009_M8_rebrand_tenant.py  0010_M9_factor_published_at_split.py  0011_M10_calc_runs.py  0012_M11_factor_publish_approvals.py  0012_M13_report_snapshots.py  0013_M12_sbti_targets.py  0014_M13_fpa_partial_unique.py  0015_M14_merge_heads.py  0016_M15_user_totp.py  0017_M16_auth_sessions.py  0018_M17_chart_annotations.py  0019_M18_rls_force_security.py  0020_M19_factor_catalog_created_by.py  0021_M20_calc_runs_dual_run_id.py  0022_M21_tenant_name_reconcile.py  0023_M22_calc_runs_append_only.py  0024_M23_merge_heads.py  0025_M24_rename_roles.py  0026_M6_site_type_country_directentry_idempotency.py  0027_M7_wave4_foundation.py  0028_M8_ncv_dual_unit_factors.py  0029_M12_user_erasure_column.py  0029_M9_audit_log_retention.py  0030_M10_schema_hardening.py  0031_M11_pin_tbc_factors.py  0032_M12_user_erasure_column.py
data/raw/: scope1_combustione.csv  scope2_elettricita.csv  scope3_categorie.csv
data/raw_factor_sources/: aib_residual_mix_2024.placeholder  defra_2024_ghg_conversion_v1.xlsx  ecoinvent_v3.10_sample.csv  ispra_413_2025.placeholder
docs/: architecture.md  audit-trail.md  data_quality_report.md  deployment.md  disaster_recovery.md  factor_sources.md  gdpr_processing_register.md  methodology.md  methodology_validation.md  requirements.md  roadmap.md  testing.md
docs/gdpr/: dpia.md
docs/methodology/: auto_calc_design.md  factor_sources.md
docs/open-questions/: WIP_QUESTIONS.md
scripts/: __init__.py  create_admin.py  create_user.py  debug_login.py  run_calc.py  seed_demo_data.py
src/ghg_tool/: __init__.py
src/ghg_tool/api/: __init__.py  main.py
src/ghg_tool/etl/: cat3_reconciliation.py  orchestrator.py
src/ghg_tool/infrastructure/: celery_app.py  redis_client.py
src/ghg_tool/ui/: __init__.py
tests/integration/: conftest.py
tests/integration/api/: __init__.py  conftest.py  test_api_integration_stubs.py  test_recalc_gwp_switch.py  test_user_erasure.py
tests/integration/db/: test_correction_procedure.py  test_immutability.py
tests/integration/e2e/: test_full_pipeline.py
tests/integration/postgres/: __init__.py  conftest.py  test_calc_persistence_dual_track.py  test_chart_annotations_append_only.py  test_direct_entry.py  test_emissions_append_only.py  test_factor_catalog_immutability.py  test_migration_0026.py  test_migration_0027.py  test_migration_0028.py  test_migration_chain.py  test_rls_tenant_isolation.py
tests/meta/: test_no_update_calc_runs.py
tests/property/: __init__.py  conftest.py  test_biogenic_split.py  test_bootstrap_ci_decimal.py  test_gwp_enforcement.py  test_mass_conservation.py  test_mb_lb_invariant.py  test_non_negativity.py
tests/unit/: conftest.py
tests/unit/api/: __init__.py  conftest.py  test_audit_log_pii.py  test_auth.py  test_auth_refresh_blacklist.py  test_auto_calc.py  test_bootstrap_admin.py  test_chart_annotations.py  test_demo_mode_startup.py  test_emissions.py  test_emissions_correction.py  test_excel_import.py  test_excel_template.py  test_exports_celery.py  test_factor_catalog_crud.py  test_factor_catalog_publish.py  test_factor_publish_approval.py  test_factor_publish_approval_resubmit.py  test_health.py  test_hotspot_analysis.py  test_intensity.py  test_jwt_auto_provisioning.py  test_middleware.py  test_rate_limit_redis.py  test_reports.py  test_routers_coverage.py  test_sbti_routes.py  test_schemas.py  test_security.py  test_security_fixes.py  test_sessions_v2.py  test_sites.py  test_totp.py  test_users_admin.py
tests/unit/application/: __init__.py  conftest.py  test_auth_service.py  test_calc_orchestrator.py  test_calc_persistence.py  test_calc_persistence_hardening.py  test_export_tasks.py  test_hotspot_service.py  test_intensity_service.py  test_recalculation_policy.py  test_reconciliation_service.py  test_sbti_service.py  test_yoy_stats.py
tests/unit/calc/: __init__.py  conftest.py  test_helpers.py  test_scope1_combustion.py  test_scope1_fugitive_zero.py  test_scope1_process.py  test_scope2_lb.py  test_scope2_mb.py  test_scope3_cat1.py  test_scope3_cat11_zero_line.py  test_scope3_cat12_eol.py  test_scope3_cat2.py  test_scope3_cat3.py  test_scope3_cat4.py  test_scope3_cat5.py  test_scope3_cat6.py  test_scope3_cat7.py  test_scope3_cat9.py  test_scope3_cat_omitted_zero_lines.py
tests/unit/domain/: test_domain_layer.py  test_emission_record.py  test_intensity_metric.py  test_ports_and_exceptions.py
tests/unit/etl/: test_cat3_reconciliation.py  test_dq_gates.py  test_transforms.py
tests/unit/infrastructure/: test_calc_scheduler.py  test_factor_catalog_migration.py  test_seed_loader.py  test_sql_factor_adapter.py  test_token_blacklist.py
tests/unit/ui/: __init__.py  conftest.py  test_admin_tenants.py  test_api_client_crud.py  test_banner.py  test_calc_client.py  test_demo_mode_gate.py  (+12 more)
(+210 files in other folders)
