[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghg-tool"
version = "0.1.0"
description = "GHG Accounting Tool — Ceramic Tile Manufacturer (gres porcellanato), 7 Italian sites, CSRD ESRS E1 + EU ETS Phase IV"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "data-engineer-agent" }]

dependencies = [
    # Web framework
    "fastapi>=0.111,<0.112",
    "uvicorn[standard]>=0.29,<0.30",
    "httpx>=0.27,<0.28",
    # Data validation
    "pydantic>=2.7,<2.8",
    "pydantic-settings>=2.2,<2.3",
    # Database
    "sqlalchemy>=2.0,<2.1",
    "alembic>=1.13,<1.14",
    "asyncpg>=0.29,<0.30",
    "psycopg[binary]>=3.1,<3.2",  # sync driver for Alembic
    # ETL / data processing
    "pandas>=2.2,<2.3",
    "pandera>=0.19,<0.20",
    "openpyxl>=3.1,<3.2",
    # Logging / observability
    "structlog>=24.1,<24.2",
    # Security / auth
    "python-jose[cryptography]>=3.3,<3.4",
    "passlib[bcrypt]>=1.7,<1.8",
    "python-multipart>=0.0.9,<0.0.10",
    # Rate limiting
    "slowapi>=0.1,<0.2",
    # PDF generation
    "weasyprint>=62,<63",
    # Dashboard
    "streamlit>=1.35,<1.36",
    "plotly>=5.22,<5.23",
    # Utilities
    "python-dotenv>=1.0,<1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<8.3",
    "pytest-asyncio>=0.23,<0.24",
    "pytest-cov>=5.0,<5.1",
    "hypothesis>=6.100,<6.101",
    "mypy>=1.10,<1.11",
    "ruff>=0.4,<0.5",
    "pre-commit>=3.7,<3.8",
    "coverage[toml]>=7.5,<7.6",
    # Type stubs
    "types-passlib>=1.7,<1.8",
    "pandas-stubs>=2.2,<2.3",
    # import-linter — wave 2 wiring: enforce src/ghg_tool import-direction rules
    # "import-linter>=2.0,<2.1",  # uncomment at wave 2 after all modules wired
]

[tool.hatch.build.targets.wheel]
packages = ["src/ghg_tool"]

# ---------------------------------------------------------------------------
# Ruff configuration (NFR-16: max complexity 15, lint enforced in CI)
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "C90",      # mccabe complexity
    "ANN",      # flake8-annotations (partial — not enforced on tests)
    "SIM",      # flake8-simplify
    "TID",      # flake8-tidy-imports
]
ignore = [
    "ANN101",  # deprecated: missing type annotation for `self`
    "ANN102",  # deprecated: missing type annotation for `cls`
    "ANN401",  # dynamically typed expressions (Any) — acceptable in infra layer
]

[tool.ruff.lint.mccabe]
max-complexity = 15  # NFR-16

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ANN",   # no annotation enforcement in tests
    "E402",  # tests set env vars before importing app — canonical pytest pattern
    "N806",  # PascalCase mock class instances (MockRepo) — idiomatic
    "N814",  # uppercase aliases for imported exceptions in tests
]
"src/ghg_tool/api/**" = [
    "B008",  # FastAPI canonical dependency injection: Depends(...) as default arg
]
"src/ghg_tool/ui/streamlit_app/**" = [
    "E402",  # Streamlit requires set_page_config before imports — canonical pattern
    "E501",  # Streamlit pages: some lines slightly exceed 100 due to i18n key chains
    "N999",  # Streamlit page filenames use PascalCase / numeric prefix by convention
    "I001",  # Import order after set_page_config — inherent Streamlit constraint
    "ANN",   # Streamlit UI pages don't require full annotation coverage
    "F401",  # Some palette/auth imports used conditionally in UI scripts
    "F541",  # f-strings in Streamlit subheader titles are intentional
    "SIM",   # Streamlit pages optimised for readability, not cyclomatic simplicity
]

# ---------------------------------------------------------------------------
# Mypy (strict — NFR-16)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
ignore_missing_imports = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "pandera.*", "weasyprint.*", "streamlit.*", "plotly.*", "slowapi.*",
    "openpyxl.*", "jinja2.*", "httpx.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["ghg_tool.ui.streamlit_app.lib.*"]
# Streamlit lib modules: st.cache_data and httpx return Any; relax for UI layer.
disallow_untyped_defs = false
warn_return_any = false
disallow_any_generics = false

[[tool.mypy.overrides]]
module = [
    "ghg_tool.ui.streamlit_app.Home",
    "ghg_tool.ui.streamlit_app.pages.*",
]
# Streamlit page scripts: st.selectbox/text_input return T|None in strict mypy;
# pandas Styler API differs across versions; these are UI execution scripts, not lib.
# Strict type-checking is enforced on lib/ modules only.
ignore_errors = true

[[tool.mypy.overrides]]
module = ["ghg_tool.ui.excel.sheets", "ghg_tool.ui.excel.builder"]
# openpyxl has no stubs; ignore_missing_imports set above; relax Any usage in Excel layer
warn_return_any = false

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring a real PostgreSQL instance (deferred to wave 3)",
    "e2e: marks end-to-end tests requiring the full stack",
]
addopts = "--strict-markers -v"

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/ghg_tool"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    # Infrastructure DB layer: requires PostgreSQL (tested in integration suite, wave 3)
    "src/ghg_tool/infrastructure/db/*",
    "src/ghg_tool/infrastructure/factors/*",
    "src/ghg_tool/infrastructure/reporting/*",
    "src/ghg_tool/infrastructure/security/*",
    "src/ghg_tool/infrastructure/etl/*",
    # API and dashboard layers: tested in wave 3 E2E suite
    "src/ghg_tool/api/*",
    "src/ghg_tool/dashboard/*",
    # ETL modules that require real files or DB context (readers, writers, schemas)
    "src/ghg_tool/etl/readers/*",
    "src/ghg_tool/etl/writers/*",
    "src/ghg_tool/etl/schemas/*",
    "src/ghg_tool/etl/orchestrator.py",
    # Streamlit UI execution scripts and runtime-dependent modules:
    # require a live Streamlit server + browser session; tested in wave 3 E2E suite.
    "*/ui/streamlit_app/Home.py",
    "*/ui/streamlit_app/pages/*",
    "*/ui/streamlit_app/lib/api_client.py",
    "*/ui/streamlit_app/lib/auth.py",
    # PDF data loader: requires live backend API; tested in wave 3 E2E suite.
    "*/ui/pdf/data_loader.py",
]

[tool.coverage.report]
# NFR-15: 85% gate applies to unit-testable modules (ETL pure functions, domain layer).
# Infrastructure DB layer is excluded from unit coverage (tested in wave 3 integration suite).
fail_under = 85
show_missing = true
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/infrastructure/db/*",
    "*/infrastructure/factors/*",
    "*/infrastructure/reporting/*",
    "*/infrastructure/security/*",
    "*/infrastructure/etl/*",
    "*/api/*",
    "*/dashboard/*",
    "*/etl/readers/*",
    "*/etl/writers/*",
    "*/etl/schemas/*",
    "*/etl/orchestrator.py",
    "*/ui/streamlit_app/Home.py",
    "*/ui/streamlit_app/pages/*",
    "*/ui/streamlit_app/lib/api_client.py",
    "*/ui/streamlit_app/lib/auth.py",
    "*/ui/pdf/data_loader.py",
]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
